--- a/Main Files/mainstyles.css
+++ b/Main Files/mainstyles.css
@@ -23,6 +23,7 @@ button {
   color: white;
   text-align: center;
   background-color: var(--primary-color);
+  border: 1px solid var(--primary-color);
 }
 
 .section-divider {
