--- a/Courses.css
+++ b/Courses.css
@@ -153,6 +153,11 @@ h2 {
   grid-row: 1;
 }
 
+.completedMods{
+  margin-bottom: 1rem;
+  grid-column: 1;
+}
+
 @media (max-width: 616px){
   .Modue{
     display: flex;
