--- a/Courses.css
+++ b/Courses.css
@@ -114,7 +114,7 @@ h1 {
   justify-content: center; /* Centers horizontally */
   align-items: center;
   text-align: center; /* Centers vertically */
-  height: 85vh;
+  height: max(85vh,396px);
   margin-top: 0px;
 }
 
@@ -158,17 +158,46 @@ h2 {
   grid-row: 3;
 }
 
+.venues{
+ grid-column: 2;
+ grid-row: 2;
+}
+
 .completedMods{
   margin-bottom: 1rem;
   grid-column: 1;
   grid-row: 3;
 }
 
+.mod{
+  background-color:#272727;
+  width: 75%;
+  border: 0px;
+  border-radius: 10px;
+  font-size: 1rem;
+  color: white;
+  text-align: left;
+  height:fit-content;
+  padding: 1rem 0.5rem;
+}
+
 @media (max-width: 616px){
+ h3 {
+   text-align: center;
+
+
+  }
+
   .Modue{
     display: flex;
     flex-direction: column;
-    margin-left: 25%;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0;
+  }
+
+  .mod{
+    margin: auto;
   }
 }
 
@@ -229,8 +258,6 @@ iframe{
   #Detail{
     margin-left: 50%;
   }
-  
-  
 
   .lecPic img{
     width: 8rem;
@@ -275,14 +302,4 @@ iframe{
   }
 }
 
-.mod{
-  background-color:#272727;
-  width: 75%;
-  border: 0px;
-  border-radius: 50px;
-  font-size: 1rem;
-  color: white;
-  text-align: left;
-  height:3rem;
-  padding-top: 1rem;
-}
+
